feat: migrate from firebase cdn to module-based

--- a/v2 - Firebase/package.json
+++ b/v2 - Firebase/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "firebase": "^10.14.1",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
