--- a/v2 - Firebase & Typescript/Typescript/package.json
+++ b/v2 - Firebase & Typescript/Typescript/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "dotenv": "^16.4.5",
     "firebase": "^10.14.1",
     "webpack": "^5.95.0",
