--- a/v3 - NextJS/package.json
+++ b/v3 - NextJS/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.3",
+    "@tanstack/react-query": "^5.59.15",
     "firebase": "^10.14.1",
     "next": "14.2.15",
     "react": "^18",
