--- a/v3 - NextJS/package.json
+++ b/v3 - NextJS/package.json
@@ -17,12 +17,14 @@
     "firebase": "^10.14.1",
     "next": "14.2.15",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
